[package]
name = "contemplate"
version = "1.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/infrarun/contemplate"
authors = [
    "infra.run",
    "Fabian Freyer <fabs@infra.run>",
    "Markus Otto <zuntrax@infra.run>",
]
description = "A template rendering tool designed to render configuration templates."
categories = ["command-line-utilities", "config", "template-engine"]
keywords = ["templating", "config-management", "kubernetes"]
exclude = [".*"]
rust-version = "1.96"

[features]
default = ["k8s"]
k8s = ["dep:k8s-openapi", "dep:kube"]

[dependencies]
indoc = "2.0.1"
shadow-rs = "2.0.0"
thiserror = "2.0.18"
serde_json = "1.0.96"
log = "0.4.19"
pretty_env_logger = "0.5.0"
notify = "8.2.0"
similar = "3.1.1"
chrono = "0.4.37"
file_diff = "1.0.0"
colored = "3.1.1"
which = "8.0.4"
prctl = "1.0.0"
daemonize = "0.5.0"
async-trait = "0.1.68"
futures = "0.3.28"
base64 = "0.22.1"
hex = "0.4.3"
clap_complete = "4.5.1"
serde_yaml = "0.9.25"
toml = "1.1.2"
num_cpus = "1.16.0"
itertools = "0.15.0"

[dependencies.sysinfo]
version = "0.39.3"
default-features = false
features = ["system"]

[dependencies.nix]
version = "0.31.3"
default-features = false
features = ["process", "signal"]

[dependencies.clap]
version = "4.4.18"
features = ["color"]

[dependencies.figment]
version = "0.10.14"
features = ["env", "toml", "yaml", "json"]

[dependencies.minijinja]
version = "2.21.0"
features = ["loader", "json", "urlencode", "custom_syntax"]

[dependencies.tokio]
version = "1.28.2"
features = ["rt-multi-thread", "sync", "process"]

[dependencies.kube]
version = "4.0.0"
default-features = false
features = [
    "client",
    "runtime",
    "rustls-tls",
    "unstable-runtime",
]
optional = true

[dependencies.k8s-openapi]
version = "0.28.0"
features = [
    "v1_32"
]
optional = true

[build-dependencies]
shadow-rs = "2.0.0"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
